--- a/README
+++ b/README
@@ -1,6 +1,16 @@
+OVERVIEW
+
+AndroidProguardScala is an Eclipse plugin that speeds up the development process when you're using Scala on Android.
+
+Scala + Android requires a Proguard run on every build.  That's slow.  The plugin watches code changes
+and avoids running Proguard if no significant changes have happened.
+
+The plugin is intended for development-time only.  You should continue to use Proguard with your own configuration
+for release builds.
+
 NOTE:  Your project must have Scala nature or the plugin will fail to run.
 
-USING
+USING THE PLUGIN
 
 1.  Point Eclipse to:
 
@@ -18,7 +28,7 @@ not a new library needs to be generated.
 proguard_cache_conf contains the generated proguard configuration files.  You should be able to use 
 proguard_postprocessesd.conf as a config file outside of this tool.
 
-BUILDING
+BUILDING THE PLUGIN ITSELF
 
 * Get a copy of the Eclipse PDE - Plugin Development Environment version.
 
